added opentelemetry integration

--- a/kubernetes/server-deployment.yaml
+++ b/kubernetes/server-deployment.yaml
@@ -19,6 +19,13 @@ spec:
         - name: compage-template-go
           image: mahendraintelops/compage-template-go
           imagePullPolicy: Always
+          env:
+            - name: SERVICE_NAME
+              value: "go-app"
+            - name: OTEL_EXPORTER_OTLP_ENDPOINT
+              value: "localhost:4317"
+            - name: INSECURE_MODE
+              value: "true"
           ports:
             - containerPort: 8080
               name: http
